# Sofle-Plus-2-viewer

./: .gitignore  Cargo.toml  LICENSE  README.md
scripts/: install-linux.sh  install-windows.ps1
src/: main.rs
